# openswisspairings_lib

./: Cargo.toml  README.md  lichess_swiss_2021.02.20_sniu3bgA_fm-maurizio-brancaleoni-pract.trf  lichess_swiss_2024.10.13_hId1KZmF_rapid.trf  rustfmt.toml  test_file.trf
.github/workflows/: rust.yml
examples/: main.rs
src/: lib.rs  player_data.rs
src/trf/: mod.rs
src/trf/player/: fields.rs  mod.rs  round.rs  utils.rs
