[package]
name = "openswisspairings_lib"
version = "0.1.0"
edition = "2021"
description = "A helper library for chess swiss system pairing programs"
license = "GPL-3.0-or-later"
repository = "https://github.com/OpenSwissPairings/openswisspairings_lib"
categories = ["data-structures", "parser-implementations"]
keywords = ["chess"]

[dependencies]
thiserror = "1.0.68"
